--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -4,7 +4,7 @@
          bootstrap="vendor/autoload.php"
          colors="true">
     <testsuites>
-        <testsuite name="zend-expressive-helpers">
+        <testsuite name="mezzio-helpers">
             <directory>./test</directory>
         </testsuite>
     </testsuites>
