--- a/composer.json
+++ b/composer.json
@@ -1,15 +1,27 @@
 {
-    "name": "zendframework/zend-expressive-helpers",
-    "description": "Helper/Utility classes for Expressive",
-    "type": "library",
+    "name": "mezzio/mezzio-helpers",
+    "description": "Helper/Utility classes for Mezzio",
     "license": "BSD-3-Clause",
     "keywords": [
-        "expressive",
+        "laminas",
+        "mezzio",
         "http",
         "middleware",
         "psr",
         "psr-7"
     ],
+    "homepage": "https://mezzio.dev",
+    "support": {
+        "docs": "https://docs.mezzio.dev/mezzio-helpers/",
+        "issues": "https://github.com/mezzio/mezzio-helpers/issues",
+        "source": "https://github.com/mezzio/mezzio-helpers",
+        "rss": "https://github.com/mezzio/mezzio-helpers/releases.atom",
+        "chat": "https://laminas.dev/chat",
+        "forum": "https://discourse.laminas.dev"
+    },
+    "config": {
+        "sort-packages": true
+    },
     "extra": {
         "branch-alias": {
             "dev-master": "3.0-dev",
@@ -19,30 +31,31 @@
     "require": {
         "php": "^5.6 || ^7.0",
         "container-interop/container-interop": "^1.1",
-        "psr/http-message": "^1.0",
-        "zendframework/zend-expressive-router": "^2.0.0"
+        "laminas/laminas-zendframework-bridge": "^1.0",
+        "mezzio/mezzio-router": "^2.0.0",
+        "psr/http-message": "^1.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "^4.7",
-        "zendframework/zend-diactoros": "^1.2",
+        "laminas/laminas-coding-standard": "~1.0.0",
+        "laminas/laminas-diactoros": "^1.2",
+        "malukenho/docheader": "^0.1.5",
         "mockery/mockery": "^0.9.5",
-        "zendframework/zend-coding-standard": "~1.0.0",
-        "malukenho/docheader": "^0.1.5"
-    },
-    "autoload": {
-      "psr-4": {
-        "Zend\\Expressive\\Helper\\": "src/"
-      }
-    },
-    "autoload-dev": {
-      "psr-4": {
-        "ZendTest\\Expressive\\Helper\\": "test/"
-      }
+        "phpunit/phpunit": "^4.7"
     },
     "suggest": {
-        "mouf/pimple-interop": "^1.0 to use Pimple for dependency injection",
         "aura/di": "3.0.*@beta to make use of Aura.Di dependency injection container",
-        "zendframework/zend-servicemanager": "^2.5 to use zend-servicemanager for dependency injection"
+        "laminas/laminas-servicemanager": "^2.5 to use laminas-servicemanager for dependency injection",
+        "mouf/pimple-interop": "^1.0 to use Pimple for dependency injection"
+    },
+    "autoload": {
+        "psr-4": {
+            "Mezzio\\Helper\\": "src/"
+        }
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "MezzioTest\\Helper\\": "test/"
+        }
     },
     "scripts": {
         "check": [
@@ -57,5 +70,8 @@
         "test": "phpunit --colors=always",
         "test-coverage": "phpunit --coverage-clover clover.xml",
         "upload-coverage": "coveralls -v"
+    },
+    "replace": {
+        "zendframework/zend-expressive-helpers": "self.version"
     }
 }
