--- a/composer.json
+++ b/composer.json
@@ -1,52 +1,62 @@
 {
-    "name": "zendframework/zend-expressive-helpers",
-    "description": "Helper/Utility classes for Expressive",
-    "type": "library",
+    "name": "mezzio/mezzio-helpers",
+    "description": "Helper/Utility classes for Mezzio",
     "license": "BSD-3-Clause",
     "keywords": [
-        "expressive",
+        "laminas",
+        "mezzio",
         "http",
         "middleware",
         "psr",
         "psr-7"
     ],
+    "homepage": "https://mezzio.dev",
+    "support": {
+        "docs": "https://docs.mezzio.dev/mezzio-helpers/",
+        "issues": "https://github.com/mezzio/mezzio-helpers/issues",
+        "source": "https://github.com/mezzio/mezzio-helpers",
+        "rss": "https://github.com/mezzio/mezzio-helpers/releases.atom",
+        "chat": "https://laminas.dev/chat",
+        "forum": "https://discourse.laminas.dev"
+    },
+    "config": {
+        "sort-packages": true
+    },
     "extra": {
         "branch-alias": {
             "dev-master": "4.2-dev",
             "dev-develop": "4.3-dev"
         }
     },
-    "config": {
-        "sort-packages": true
-    },
     "require": {
         "php": "^5.6 || ^7.0",
+        "laminas/laminas-zendframework-bridge": "^1.0",
+        "mezzio/mezzio-router": "^2.2",
         "psr/container": "^1.0",
         "psr/http-message": "^1.0.1",
-        "webimpress/http-middleware-compatibility": "^0.1.1",
-        "zendframework/zend-expressive-router": "^2.2"
+        "webimpress/http-middleware-compatibility": "^0.1.1"
     },
     "require-dev": {
+        "laminas/laminas-coding-standard": "~1.0.0",
+        "laminas/laminas-diactoros": "^1.3.10",
         "malukenho/docheader": "^0.1.5",
         "mockery/mockery": "^1.0",
-        "phpunit/phpunit": "^5.7.22 || ^6.4.1",
-        "zendframework/zend-coding-standard": "~1.0.0",
-        "zendframework/zend-diactoros": "^1.3.10"
-    },
-    "autoload": {
-      "psr-4": {
-        "Zend\\Expressive\\Helper\\": "src/"
-      }
-    },
-    "autoload-dev": {
-      "psr-4": {
-        "ZendTest\\Expressive\\Helper\\": "test/"
-      }
+        "phpunit/phpunit": "^5.7.22 || ^6.4.1"
     },
     "suggest": {
-        "mouf/pimple-interop": "^1.0 to use Pimple for dependency injection",
         "aura/di": "^3.2 to make use of Aura.Di dependency injection container",
-        "zendframework/zend-servicemanager": "^3.3 to use zend-servicemanager for dependency injection"
+        "laminas/laminas-servicemanager": "^3.3 to use laminas-servicemanager for dependency injection",
+        "mouf/pimple-interop": "^1.0 to use Pimple for dependency injection"
+    },
+    "autoload": {
+        "psr-4": {
+            "Mezzio\\Helper\\": "src/"
+        }
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "MezzioTest\\Helper\\": "test/"
+        }
     },
     "scripts": {
         "check": [
@@ -60,5 +70,8 @@
         "license-check": "docheader check src/ test/",
         "test": "phpunit --colors=always",
         "test-coverage": "phpunit --coverage-clover clover.xml"
+    },
+    "replace": {
+        "zendframework/zend-expressive-helpers": "self.version"
     }
 }
