--- a/composer.json
+++ b/composer.json
@@ -1,52 +1,23 @@
 {
-    "name": "zendframework/zend-expressive-helpers",
-    "description": "Helper/Utility classes for Expressive",
+    "name": "mezzio/mezzio-helpers",
+    "description": "Helper/Utility classes for Mezzio",
     "license": "BSD-3-Clause",
     "keywords": [
-        "expressive",
+        "laminas",
+        "mezzio",
         "http",
         "middleware",
         "psr",
-        "psr-7",
-        "zf",
-        "zendframework",
-        "zend-expressive"
+        "psr-7"
     ],
+    "homepage": "https://mezzio.dev",
     "support": {
-        "issues": "https://github.com/zendframework/zend-expressive-helpers/issues",
-        "source": "https://github.com/zendframework/zend-expressive-helpers",
-        "rss": "https://github.com/zendframework/zend-expressive-helpers/releases.atom",
-        "slack": "https://zendframework-slack.herokuapp.com",
-        "forum": "https://discourse.zendframework.com/c/questions/expressive"
-    },
-    "require": {
-        "php": "^7.1",
-        "psr/container": "^1.0",
-        "psr/http-message": "^1.0.1",
-        "psr/http-server-middleware": "^1.0",
-        "zendframework/zend-expressive-router": "^3.0.0alpha1 || ^3.0"
-    },
-    "require-dev": {
-        "malukenho/docheader": "^0.1.6",
-        "mockery/mockery": "^1.0",
-        "phpunit/phpunit": "^6.5.5",
-        "zendframework/zend-coding-standard": "~1.0.0",
-        "zendframework/zend-diactoros": "^1.3.10"
-    },
-    "suggest": {
-        "mouf/pimple-interop": "^1.0 to use Pimple for dependency injection",
-        "aura/di": "^3.2 to make use of Aura.Di dependency injection container",
-        "zendframework/zend-servicemanager": "^3.3 to use zend-servicemanager for dependency injection"
-    },
-    "autoload": {
-        "psr-4": {
-            "Zend\\Expressive\\Helper\\": "src/"
-        }
-    },
-    "autoload-dev": {
-        "psr-4": {
-            "ZendTest\\Expressive\\Helper\\": "test/"
-        }
+        "docs": "https://docs.mezzio.dev/mezzio-helpers/",
+        "issues": "https://github.com/mezzio/mezzio-helpers/issues",
+        "source": "https://github.com/mezzio/mezzio-helpers",
+        "rss": "https://github.com/mezzio/mezzio-helpers/releases.atom",
+        "chat": "https://laminas.dev/chat",
+        "forum": "https://discourse.laminas.dev"
     },
     "config": {
         "sort-packages": true
@@ -56,6 +27,36 @@
             "dev-master": "4.2.x-dev",
             "dev-develop": "4.3.x-dev",
             "dev-release-5.0.0": "5.0.x-dev"
+        }
+    },
+    "require": {
+        "php": "^7.1",
+        "laminas/laminas-zendframework-bridge": "^1.0",
+        "mezzio/mezzio-router": "^3.0.0alpha1 || ^3.0",
+        "psr/container": "^1.0",
+        "psr/http-message": "^1.0.1",
+        "psr/http-server-middleware": "^1.0"
+    },
+    "require-dev": {
+        "laminas/laminas-coding-standard": "~1.0.0",
+        "laminas/laminas-diactoros": "^1.3.10",
+        "malukenho/docheader": "^0.1.6",
+        "mockery/mockery": "^1.0",
+        "phpunit/phpunit": "^6.5.5"
+    },
+    "suggest": {
+        "aura/di": "^3.2 to make use of Aura.Di dependency injection container",
+        "laminas/laminas-servicemanager": "^3.3 to use laminas-servicemanager for dependency injection",
+        "mouf/pimple-interop": "^1.0 to use Pimple for dependency injection"
+    },
+    "autoload": {
+        "psr-4": {
+            "Mezzio\\Helper\\": "src/"
+        }
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "MezzioTest\\Helper\\": "test/"
         }
     },
     "scripts": {
@@ -69,5 +70,8 @@
         "test": "phpunit --colors=always",
         "test-coverage": "phpunit --colors=always --coverage-clover clover.xml",
         "license-check": "docheader check src/ test/"
+    },
+    "replace": {
+        "zendframework/zend-expressive-helpers": "self.version"
     }
 }
