--- a/composer.json
+++ b/composer.json
@@ -69,6 +69,6 @@
         "license-check": "docheader check src/ test/"
     },
     "replace": {
-        "zendframework/zend-expressive-helpers": "self.version"
+        "zendframework/zend-expressive-helpers": "^5.3.0"
     }
 }
