--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,6 @@
     },
     "require": {
         "php": "^7.3 || ~8.0.0",
-        "ext-json": "*",
         "laminas/laminas-zendframework-bridge": "^1.0",
         "mezzio/mezzio-router": "^3.0",
         "psr/container": "^1.0",
@@ -37,6 +36,7 @@
         "psr/http-server-middleware": "^1.0"
     },
     "require-dev": {
+        "ext-json": "*",
         "laminas/laminas-coding-standard": "~2.1.0",
         "laminas/laminas-diactoros": "^1.7.1",
         "malukenho/docheader": "^0.1.8",
@@ -45,6 +45,9 @@
         "phpunit/phpunit": "^9.4.2",
         "psalm/plugin-phpunit": "^0.15.1",
         "vimeo/psalm": "^4.7"
+    },
+    "suggest": {
+        "ext-json": "If you wish to use the JsonStrategy with BodyParamsMiddleware"
     },
     "autoload": {
         "psr-4": {
