--- a/composer.json
+++ b/composer.json
@@ -38,8 +38,7 @@
     "require-dev": {
         "ext-json": "*",
         "laminas/laminas-coding-standard": "~2.1.0",
-        "laminas/laminas-diactoros": "^1.7.1",
-        "malukenho/docheader": "^0.1.8",
+        "laminas/laminas-diactoros": "^2.5.0",
         "mockery/mockery": "^1.4.2",
         "phpspec/prophecy-phpunit": "^2.0",
         "phpunit/phpunit": "^9.4.2",
@@ -61,7 +60,6 @@
     },
     "scripts": {
         "check": [
-            "@license-check",
             "@cs-check",
             "@test"
         ],
@@ -69,8 +67,7 @@
         "cs-fix": "phpcbf",
         "test": "phpunit --colors=always",
         "static-analysis": "psalm --shepherd --stats",
-        "test-coverage": "phpunit --colors=always --coverage-clover clover.xml",
-        "license-check": "docheader check src/ test/"
+        "test-coverage": "phpunit --colors=always --coverage-clover clover.xml"
     },
     "replace": {
         "zendframework/zend-expressive-helpers": "^5.3.0"
