--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,10 @@
         "forum": "https://discourse.laminas.dev"
     },
     "config": {
-        "sort-packages": true
+        "sort-packages": true,
+        "platform": {
+            "php": "7.4"
+        }
     },
     "extra": {
         "laminas": {
@@ -37,7 +40,7 @@
     },
     "require-dev": {
         "ext-json": "*",
-        "laminas/laminas-coding-standard": "~2.1.0",
+        "laminas/laminas-coding-standard": "~2.2.0",
         "laminas/laminas-diactoros": "^2.5.0",
         "mockery/mockery": "^1.4.2",
         "phpspec/prophecy-phpunit": "^2.0",
