--- a/composer.json
+++ b/composer.json
@@ -32,7 +32,6 @@
     },
     "require": {
         "php": "^7.3 || ~8.0.0 || ~8.1.0",
-        "laminas/laminas-zendframework-bridge": "^1.0",
         "mezzio/mezzio-router": "^3.0",
         "psr/container": "^1.0",
         "psr/http-message": "^1.0.1",
@@ -72,7 +71,7 @@
         "static-analysis": "psalm --shepherd --stats",
         "test-coverage": "phpunit --colors=always --coverage-clover clover.xml"
     },
-    "replace": {
-        "zendframework/zend-expressive-helpers": "^5.3.0"
+    "conflict": {
+        "zendframework/zend-expressive-helpers": "*"
     }
 }
