--- a/composer.json
+++ b/composer.json
@@ -33,7 +33,7 @@
     "require": {
         "php": "^7.3 || ~8.0.0 || ~8.1.0",
         "mezzio/mezzio-router": "^3.0",
-        "psr/container": "^1.0",
+        "psr/container": "^1.0 || ^2.0",
         "psr/http-message": "^1.0.1",
         "psr/http-server-middleware": "^1.0"
     },
