--- a/composer.json
+++ b/composer.json
@@ -21,8 +21,9 @@
     },
     "config": {
         "sort-packages": true,
-        "platform": {
-            "php": "7.4"
+        "allow-plugins": {
+            "dealerdirect/phpcodesniffer-composer-installer": true,
+            "composer/package-versions-deprecated": true
         }
     },
     "extra": {
@@ -31,7 +32,7 @@
         }
     },
     "require": {
-        "php": "^7.3 || ~8.0.0 || ~8.1.0",
+        "php": "^7.4 || ~8.0.0 || ~8.1.0",
         "mezzio/mezzio-router": "^3.0",
         "psr/container": "^1.0 || ^2.0",
         "psr/http-message": "^1.0.1",
@@ -43,7 +44,7 @@
         "laminas/laminas-diactoros": "^2.5.0",
         "mockery/mockery": "^1.4.2",
         "phpspec/prophecy-phpunit": "^2.0",
-        "phpunit/phpunit": "^9.4.2",
+        "phpunit/phpunit": "^9.5.11",
         "psalm/plugin-phpunit": "^0.15.1",
         "vimeo/psalm": "^4.7"
     },
