--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,7 @@
             "composer/package-versions-deprecated": true
         },
         "platform": {
-            "php": "7.4.99"
+            "php": "8.0.99"
         }
     },
     "extra": {
@@ -35,7 +35,7 @@
         }
     },
     "require": {
-        "php": "^7.4 || ~8.0.0 || ~8.1.0",
+        "php": "~8.0.0 || ~8.1.0 || ~8.2.0",
         "mezzio/mezzio-router": "^3.0",
         "psr/container": "^1.0 || ^2.0",
         "psr/http-message": "^1.0.1",
@@ -44,10 +44,10 @@
     "require-dev": {
         "ext-json": "*",
         "laminas/laminas-coding-standard": "~2.4.0",
-        "laminas/laminas-diactoros": "^2.11.1",
-        "phpunit/phpunit": "^9.5.11",
+        "laminas/laminas-diactoros": "^2.19",
+        "phpunit/phpunit": "^9.5.25",
         "psalm/plugin-phpunit": "^0.17.0",
-        "vimeo/psalm": "^4.17"
+        "vimeo/psalm": "^4.29"
     },
     "suggest": {
         "ext-json": "If you wish to use the JsonStrategy with BodyParamsMiddleware"
