--- a/.gitattributes
+++ b/.gitattributes
@@ -1,9 +1,11 @@
-/.coveralls.yml export-ignore
-/.docheader export-ignore
 /.gitattributes export-ignore
 /.gitignore export-ignore
-/.travis.yml export-ignore
 /docs/ export-ignore
-/phpcs.xml export-ignore
+/phpcs.xml.dist export-ignore
 /phpunit.xml.dist export-ignore
 /test/ export-ignore
+/.github export-ignore
+/composer.lock export-ignore
+/renovate.json export-ignore
+/psalm.xml export-ignore
+/psalm-baseline.xml export-ignore
