Migrate phpunit configuration
Signed-off-by: Aleksei Khudiakov <aleksey@xerkus.pro>

--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -12,11 +12,11 @@
     displayDetailsOnTestsThatTriggerDeprecations="true"
     displayDetailsOnTestsThatTriggerErrors="true"
 >
-  <coverage>
+  <source>
     <include>
       <directory suffix=".php">src</directory>
     </include>
-  </coverage>
+  </source>
   <testsuites>
     <testsuite name="mezzio-helpers">
       <directory>./test</directory>
