--- a/composer.json
+++ b/composer.json
@@ -35,7 +35,7 @@
         }
     },
     "require": {
-        "php": "~8.1.0 || ~8.2.0",
+        "php": "~8.1.0 || ~8.2.0 || ~8.3.0",
         "mezzio/mezzio-router": "^3.17",
         "psr/container": "^1.0 || ^2.0.2",
         "psr/http-message": "^1.0.1 || ^2.0.0",
