Conflict with older `amphp/amp` for 8.4 compat in tests
Signed-off-by: George Steel <george@net-glue.co.uk>

--- a/composer.json
+++ b/composer.json
@@ -74,6 +74,7 @@
         "test-coverage": "phpunit --colors=always --coverage-clover clover.xml"
     },
     "conflict": {
-        "zendframework/zend-expressive-helpers": "*"
+        "zendframework/zend-expressive-helpers": "*",
+        "amphp/amp": "<2.6.4"
     }
 }
